Fixed scrollbar appearing

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -430,7 +430,7 @@ a.desc:after {
 }
 
 .comic-view {
-    margin-top: 51px;
+    padding-top: 51px;
 }
 
 .comic-view .content {
